--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,4 +3,4 @@ RewriteEngine On
 RewriteRule ^$ index.php [QSA]
 RewriteRule ^([^.]+)$ $1.html [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ /dispatch.php [QSA,L]
+RewriteRule ^(.*)$ /bootstrap.php [QSA,L]
